# climate_risk_index_for_biodiversity

./: .gitignore  .pre-commit-config.yaml  README.md
client/: Dockerfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
client/src/: store.ts  types.ts
client/src/app/: globals.css  layout.tsx  map-provider.tsx  page.tsx  react-query-provider.tsx
client/src/app/[area]/: page.tsx
client/src/components/map/: index.tsx
client/src/components/navigation/: index.tsx
client/src/components/scenario-toggle/: index.tsx
client/src/components/ui/: command.tsx  popover.tsx  sidebar.tsx
client/src/containers/detail/: index.tsx
client/src/containers/detail/climate-risk-chart/: chart.tsx  index.tsx
client/src/containers/detail/intro/: index.tsx
client/src/containers/detail/stats/: index.tsx
client/src/containers/main/: index.tsx
client/src/containers/main/filters/: index.tsx
client/src/containers/main/filters/search/: index.tsx
client/src/containers/main/intro/: index.tsx
client/src/containers/main/table/: columns.tsx  index.tsx
client/src/containers/main/table/legend/: index.tsx
client/src/containers/main/table/risk-index-chart/: index.tsx
client/src/containers/map/layer-manager/: index.tsx
client/src/containers/map/layers/: atlantic-bioregions.tsx  high-emissions.tsx  low-emissions.tsx  wdpa.tsx
client/src/data/: areas.tsx  areas_old.tsx  categories-metadata.json
client/src/hooks/: use-selected-area.ts
client/src/utils/: filters.ts
data-preprocessing/: README.md  pyproject.toml
data-preprocessing/notebooks/: explore.py
data-processing/: README.md  main.py  pyproject.toml
data-processing/conf/base/: catalog.yml  parameters_processing.yml
data-processing/mapbox-tileset-recipes/: mpas-tileset-recipe.json  risk-tileset-recipe.json
data-processing/notebooks/: explore.py
data-processing/src/data_processing/: __init__.py  __main__.py  models.py  settings.py
data-processing/src/data_processing/datasets/: raster.py
data-processing/src/data_processing/pipelines/processing/: __init__.py  main.py  nodes.py  pipeline.py
data-processing/tests/pipelines/processing/: test_pipeline.py
