[project]
name = "data-preprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "numpy>=2.2.6",
    "polars>=1.30.0",
    "rasterio>=1.4.3",
]

[dependency-groups]
dev = [
    "marimo>=0.13.14",
    "ruff>=0.11.11",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.8.0",
]
