[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.12"
name = "data_processing"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "ipython>=8.10",
    "jupyterlab>=3.0",
    "notebook",
    "kedro~=0.19.13",
    "polars>=1.30.0",
    "rasterio>=1.4.3",
    "xarray>=2024.7.0",
    "rioxarray>=0.15.0",
    "kedro-datasets[geopandas,polars]>=4.1.0",
    "exactextract>=0.2.2",
    "pydantic>=2.11.7",
    "mapbox-tilesets>=1.14.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.15",
]

[project.scripts]
data-processing = "data_processing.__main__:main"

[project.optional-dependencies]
dev = ["pytest~=7.2", "ruff~=0.1.8"]

[tool.kedro]
package_name = "data_processing"
project_name = "data-processing"
kedro_init_version = "0.19.13"
tools = "['Linting', 'Testing', 'Data Structure']"
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.lint]
select = ["F", "W", "E", "I", "UP", "PL", "T201"]
ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true

[tool.setuptools.dynamic.version]
attr = "data_processing.__version__"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro_telemetry]
project_id = "c963e283cd814db8bc09685a89e1907f"

[tool.pyright]
venvPath = "."
venv = ".venv"
